# typst2pdf

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  app.py  openapi.yaml  pyproject.toml  requirements.txt
.claude/: settings.json
example_zip/: main.typ
examples/: hello.typ
src/typst_api/: __init__.py  config.py
src/typst_api/routes/: health.py  render.py
src/typst_api/services/: __init__.py  compiler.py
src/typst_api/utils/: parsers.py
tests/: conftest.py  test_api.py  test_app.py
