[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "typst-api"
version = "2.0.0"
description = "REST API for converting Typst documents to PDF, PNG, SVG"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "flask>=3.0,<4.0",
    "typst>=0.14,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "flake8>=7.0",
]

[project.scripts]
typst-api = "typst_api:main"

[tool.setuptools.packages.find]
where = ["src"]
